# web-monitoring-diff

./: .coveragerc  .dockerignore  .editorconfig  .env.example  .gitattributes  .gitignore  .readthedocs.yaml  Dockerfile  MANIFEST.in  README.md  pyproject.toml  requirements-dev.txt  requirements-docs.txt  requirements-experimental.txt  requirements-server.txt  requirements.txt  setup.cfg  setup.py
.circleci/: config.yml
.github/: dependabot.yml
.github/workflows/: docker.yml
docs/: Makefile  requirements-experimental.txt  requirements.txt
docs/source/: api-reference.rst  conf.py  configuration.rst  index.rst  installation.rst  release-history.rst  usage.rst
my_env/: pyvenv.cfg
scripts/: web-monitoring-diff-server
test/Build the engine/: pdf_diff_engine.py  pdf_diff_ui.py
test/Layer_Architecture/: layer1_extraction.py  layer2_diff.py  layer3_paint.py  layer4_ui.py
test/Proposed_ClientSide_Script/: index.html
web_monitoring_diff/: __init__.py  _version.py  basic_diffs.py  content_type.py  html_links_diff.py  html_render_diff.py  utils.py
web_monitoring_diff/experimental/: __init__.py  htmldiffer.py  htmltreediff.py
web_monitoring_diff/server/: __init__.py  cache.py  diff_pool.py  errors.py  executor.py  http_client.py  mock_http.py  routes.py  server.py
web_monitoring_diff/tests/: test_basic_diffs.py  test_html_diff.py  test_html_diff_validity.py  test_links_diff.py  test_server_caching.py  test_server_exc_handling.py  test_utils.py
