[build-system]
# Instructions to pip
requires = ["setuptools>=61.0", "versioneer[toml]"]
build-backend = "setuptools.build_meta"

[project]
name = "web-monitoring-diff"
dynamic = ["version"]
description = "Tools for diffing and comparing web content. Also includes a web server that makes diffs available as an HTTP service."
readme = "README.md"
requires-python = ">=3.10"
license = {text = "GPL-3.0-only"}
authors = [
    {name = "Environmental Data Governance Initiative(EDGI)"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.14",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
]

# Main Core Dependencies 
dependencies = [
    "beautifulsoup4>=4.9.0,<5",
    "fast_diff_match_patch>=2.0.1,<3",
    "html5-parser>=0.4.0,<0.5",
    "lxml>=4.5.0,<7",
]

[project.urls]
Documentation = "https://web-monitoring-diff.readthedocs.io/en/stable/"
Changelog = "https://web-monitoring-diff.readthedocs.io/en/stable/release-history.html"
"Source code" = "https://github.com/edgi-govdata-archiving/web-monitoring-diff"
Issues = "https://github.com/edgi-govdata-archiving/web-monitoring-diff/issues"

# Sub Dependencies according to use case
[project.optional-dependencies]
server = [
    "chardet>=5.0.0,<6",
    "pycurl>=7.43,<8",
    "sentry-sdk[tornado]>=2.0.0,<3.0",
    "tornado>=6.0.0,<7",
]
dev = [
    "coverage~=7.13",
    "flake8~=7.3.0",
    "pytest~=9.0.2",
]
docs = [
    "ipython~=7.34.0",
    "numpydoc~=1.10",
    "sphinx~=8.2.3",
    "sphinx-copybutton~=0.5.2",
    "sphinx_rtd_theme~=3.0.2",
]


[project.scripts]
web-monitoring-diff-server = "web_monitoring_diff.server.server:cli"

[tool.setuptools.packages.find]
exclude = ["docs*", "tests*"]

[tool.setuptools.package-data]
web_monitoring_diff = ["example_data/*"]

# Automatic versioning
[tool.versioneer]
VCS = "git"
style = "pep440-post"
versionfile_source = "web_monitoring_diff/_version.py"
versionfile_build = "web_monitoring_diff/_version.py"
tag_prefix = "v"

# Docstring Linting
[tool.numpydoc_validation]
checks = [
    "all",
    "-SA01",
]
